[gd_scene load_steps=20 format=2]

[ext_resource path="res://sprites/Lapu/LapuWindow1.png" type="Texture" id=1]
[ext_resource path="res://fonts/Hi_Melody/HiMelody-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sprites/Lapu/LapuWindow5.png" type="Texture" id=3]
[ext_resource path="res://sprites/Lapu/LapuWindow3.png" type="Texture" id=4]
[ext_resource path="res://sprites/Lapu/LapuWindow2.png" type="Texture" id=5]
[ext_resource path="res://sprites/Lapu/LapuWindow4.png" type="Texture" id=6]
[ext_resource path="res://code/StoryUILapu.gd" type="Script" id=7]

[sub_resource type="StyleBoxLine" id=1]
thickness = 5
vertical = true

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 42
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=10]
default_font = SubResource( 9 )

[sub_resource type="DynamicFont" id=11]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=12]
default_font = SubResource( 11 )

[node name="StoryUI" type="MarginContainer"]
margin_right = 1024.0
margin_bottom = 1024.0
rect_min_size = Vector2( 1024, 1024 )
custom_constants/margin_left = 640
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 640.0
margin_right = 1032.0
margin_bottom = 1072.0

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_right = 4.0
margin_bottom = 1072.0
custom_styles/separator = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 8.0
margin_right = 392.0
margin_bottom = 1072.0
rect_min_size = Vector2( 384, 0 )

[node name="Lapu" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 384.0
margin_bottom = 133.0
theme = SubResource( 3 )
text = "
Lapu"
align = 1
uppercase = true

[node name="AbilityLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 137.0
margin_right = 384.0
margin_bottom = 168.0
theme = SubResource( 5 )
text = "Adds row of blocks"
align = 1

[node name="OpponentContainer" type="CenterContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 172.0
margin_right = 384.0
margin_bottom = 556.0
rect_min_size = Vector2( 0, 384 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="HBoxContainer/VBoxContainer/OpponentContainer"]
position = Vector2( 184, 188 )
frames = SubResource( 6 )
playing = true

[node name="StoryContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 560.0
margin_right = 384.0
margin_bottom = 1072.0
rect_min_size = Vector2( 0, 512 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/StoryContainer"]
margin_right = 384.0
margin_bottom = 127.0

[node name="DialogLabel" type="Label" parent="HBoxContainer/VBoxContainer/StoryContainer/VBoxContainer"]
margin_right = 384.0
margin_bottom = 31.0
theme = SubResource( 8 )
text = "[ENTER] to continue"
align = 1
autowrap = true

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer/StoryContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 384.0
margin_bottom = 39.0

[node name="StoryTitleLabel" type="Label" parent="HBoxContainer/VBoxContainer/StoryContainer/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 43.0
margin_right = 384.0
margin_bottom = 86.0
theme = SubResource( 10 )
text = "Story"
autowrap = true
uppercase = true

[node name="Tween" type="Tween" parent="HBoxContainer/VBoxContainer/StoryContainer/VBoxContainer/StoryTitleLabel"]

[node name="ShrinkTween" type="Tween" parent="HBoxContainer/VBoxContainer/StoryContainer/VBoxContainer/StoryTitleLabel"]

[node name="StoryLabel" type="Label" parent="HBoxContainer/VBoxContainer/StoryContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 384.0
margin_bottom = 127.0
theme = SubResource( 12 )
autowrap = true

[node name="AttackTimer" type="Timer" parent="HBoxContainer"]
wait_time = 10.0
autostart = true
[connection signal="tween_all_completed" from="HBoxContainer/VBoxContainer/StoryContainer/VBoxContainer/StoryTitleLabel/Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_all_completed" from="HBoxContainer/VBoxContainer/StoryContainer/VBoxContainer/StoryTitleLabel/ShrinkTween" to="." method="_on_ShrinkTween_tween_all_completed"]
[connection signal="timeout" from="HBoxContainer/AttackTimer" to="." method="_on_AttackTimer_timeout"]
